--- a/examples/browser/ipfs-stream.html
+++ b/examples/browser/ipfs-stream.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>IPFS Testing</title>
+	<title>Fstage - IPFS Stream</title>
 	<meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="data:image/x-icon;," type="image/x-icon">
 	<style>
