Update store to include withMeta method

--- a/examples/pwa/index.html
+++ b/examples/pwa/index.html
@@ -332,7 +332,7 @@
 					init();
 				}).catch(function(err) {
 					console.error(err);
-					loadFailed();
+					init();
 				});
 			} else {
 				init();
