Start interaction animations

--- a/examples/pwa2/index.html
+++ b/examples/pwa2/index.html
@@ -20,7 +20,7 @@
 		box-sizing: border-box;
 	}
 
-	html, body, pwa-layout {
+	html, body, pwa-app {
 		width: 100%;
 		height: 100%;
 		padding: 0;
@@ -35,7 +35,7 @@
 		font-family: var(--pwa-font);
 	}
 	
-	pwa-layout {
+	pwa-app {
 		display: block;
 	}
 
