--- a/examples/stream/index.html
+++ b/examples/stream/index.html
@@ -16,7 +16,7 @@
 	<script type="module" src="../../src/js/fstage.mjs"></script>
 	<script type="module">
 	//load modules
-	Fstage.load([ 'hls', 'ipfs' ]).then(async function(exports) {
+	fstage.load([ 'hls', 'ipfs' ]).then(async function(exports) {
 		//Config: video type
 		var type = 'ipfs';
 		//stream urls
